--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">lab4</string>
     <string name="hint">Текст</string>
     <string name="button">Нажми</string>
+    <string name="ok">OK</string>
 </resources>
